committing generated nbdev html pages

--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
-lib_path = tensorflow_dev_cert_bootcamp
+#lib_path = tensorflow_dev_cert_bootcamp
 nbs_path = nbs
 recursive = True
 tst_flags = notest
